Minor fix to learning module slides to use better text contrast within dark mode

--- a/open-fin-al/src/index.css
+++ b/open-fin-al/src/index.css
@@ -25,7 +25,7 @@
 body.dark-mode {
   --primary-color: #6674f1;
   --primary-color-hover: #6977f7;
-  --secondary-color: #384457;
+  --secondary-color: #516a91;
   --tertiary-color: #4a5568;
   --background-color: #3d3d3d;
   --background-color-highlight-light: #303030;
